--- a/SignUpValidation/Views/SignUp/SignUp.cshtml
+++ b/SignUpValidation/Views/SignUp/SignUp.cshtml
@@ -49,25 +49,22 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-9">
-                    <div class="form-group  col-xs-6 col-md-6">
-                        <label asp-for="City" class="control-label"></label>                
-                     <select asp-for="City">  
-                         <option selected disabled>Select City</option>  
-                         <option>Mumbai</option>  
-                         <option>Thane</option>  
-                         <option>Pune</option>  
-                     </select>
-
-                        <span asp-validation-for="City" class="text-danger"></span>
-                    </div>
-                    <div class="form-group  col-xs-6 col-md-6">
-                        <label asp-for="Gender" class="control-label"></label>
-                        <input type="radio" name="Gender" value="M" />Male  
-                        <input type="radio" name="Gender" value="F" />Female 
-                        <span asp-validation-for="Gender" class="text-danger"></span>
-                    </div>
+                <div class="form-group  col-xs-6 col-md-6">
+                    <label asp-for="City" class="control-label"></label>                
+                    <select asp-for="City">  
+                        <option selected disabled>Select City</option>  
+                        <option>Mumbai</option>  
+                        <option>Thane</option>  
+                        <option>Pune</option>  
+                    </select>
+                    <span asp-validation-for="City" class="text-danger"></span>
                 </div>
+                <div class="form-group  col-xs-6 col-md-6">
+                    <label asp-for="Gender" class="control-label"></label>
+                    <input type="radio" asp-for="Gender" name="Gender" value="M" />Male  
+                    <input type="radio" asp-for="Gender" name="Gender" value="F" />Female  
+                    <span asp-validation-for="Gender" class="text-danger"></span>
+                </div>                     
             </div>
             <div class="row">
                 <div class="form-group form-check col-xs-6 col-md-6">
